<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/strong_yellow"
    tools:context=".activity_time_feeling">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="652dp"
        android:layout_height="556dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/woman_staring_window" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="294dp"
        android:layout_height="52dp"
        android:layout_marginTop="436dp"
        android:text="@string/how_much_time_feeling"
        android:textAlignment="center"
        android:textColor="@color/strong_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <Button
        android:id="@+id/button22"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple"
        android:onClick="nextButton"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/last_month"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button20"
        app:rippleColor="#00FFFFFF" />

    <Button
        android:id="@+id/button19"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple"
        android:onClick="nextButton"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/last_days"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17"
        app:rippleColor="#00FFFFFF" />

    <Button
        android:id="@+id/button20"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple"
        android:onClick="nextButton"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/last_weeks"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button19"
        app:rippleColor="#00FFFFFF" />

    <Button
        android:id="@+id/button17"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/purple"
        android:onClick="nextButton"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/last_hours"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:rippleColor="#00FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>