<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:textAlignment="viewStart"
    tools:context=".activity_welcome_input">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="323dp"
        android:layout_height="182dp"
        android:layout_marginTop="76dp"
        android:text="@string/space_all_yours"
        android:textAlignment="center"
        android:textColor="@color/gentle_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/message"
        android:layout_width="361dp"
        android:layout_height="205dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded"
        android:gravity="start"
        android:hint="@string/start_typing"
        android:padding="20dp"
        android:textAlignment="viewStart"
        android:textColor="@color/strong_pink"
        android:textColorHint="@color/strong_pink"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="392dp"
        android:layout_height="186dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/circular_button_3" />

    <Button
        android:id="@+id/nextButton4"
        android:layout_width="126dp"
        android:layout_height="46dp"
        android:background="#00FFFFFF"
        android:onClick="nextButton"
        android:text="@string/next"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.885" />

</androidx.constraintlayout.widget.ConstraintLayout>